Task 2 Home Part.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(OS_Lab_One_24 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(OS_Lab_One_24
-        fork.c)
+        fork.c
+        shmem.c)
